# Copyright (C) 2006 Jorge Riquelme Santana <totex@totex.cl>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LIBRARIES = libtge.a

libtge_a_SOURCES = \
		Animation.cpp      ImageButton.cpp    Textfield.cpp \
		Brush.cpp          InputDialog.cpp    Uta.cpp \
		Button.cpp         Label.cpp          Util.cpp \
		Rapidity.cpp       Widget.cpp \
		ConfirmDialog.cpp  SDLScreen.cpp      Window.cpp \
		Cursors.cpp        SimpleDialog.cpp \
		Gradient.cpp       SurfaceWidget.cpp

noinst_HEADERS = \
		Animation.h      ImageButton.h    Textfield.h \
		Brush.h          InputDialog.h    Uta.h \
		Button.h         Label.h          Util.h \
		Rapidity.h       Widget.h \
		ConfirmDialog.h  SDLScreen.h      Window.h \
		Cursors.h        SimpleDialog.h \
		Gradient.h       SurfaceWidget.h

